--- a/JankenApp/Base.lproj/Main.storyboard
+++ b/JankenApp/Base.lproj/Main.storyboard
@@ -18,25 +18,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5647.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="XYU-qY-XAa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_5647.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="XYU-qY-XAa">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="てんてんじゃんけんゲーム！！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OM-rf-6IU">
-                                <rect key="frame" x="66" y="89" width="243" height="68"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="てんてんじゃんけんゲーム！！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OM-rf-6IU">
+                                <rect key="frame" x="46" y="32" width="283" height="77"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="68" id="ot8-3s-QM0"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OPw-Hp-n46">
-                                <rect key="frame" x="138" y="511" width="98" height="56"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OPw-Hp-n46">
+                                <rect key="frame" x="124" y="539" width="127" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="WAd-D3-4jk"/>
-                                </constraints>
                                 <state key="normal" title="START"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="kTd-dY-lQi"/>
@@ -44,24 +41,12 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="XYU-qY-XAa" firstAttribute="leading" secondItem="G2s-zx-XSu" secondAttribute="leading" id="2vL-JQ-9s8"/>
-                            <constraint firstItem="XYU-qY-XAa" firstAttribute="trailing" secondItem="G2s-zx-XSu" secondAttribute="trailing" id="Czk-KK-32g"/>
-                            <constraint firstItem="OPw-Hp-n46" firstAttribute="leading" secondItem="G2s-zx-XSu" secondAttribute="leading" constant="138" id="FuR-jr-wdM"/>
-                            <constraint firstItem="G2s-zx-XSu" firstAttribute="bottom" secondItem="OPw-Hp-n46" secondAttribute="bottom" constant="100" id="JmU-AP-ygg"/>
-                            <constraint firstItem="0OM-rf-6IU" firstAttribute="centerX" secondItem="OPw-Hp-n46" secondAttribute="centerX" id="LFu-B2-TbO"/>
-                            <constraint firstItem="XYU-qY-XAa" firstAttribute="top" secondItem="l5P-KV-6jj" secondAttribute="top" id="fzh-ou-JI4"/>
-                            <constraint firstItem="0OM-rf-6IU" firstAttribute="top" secondItem="G2s-zx-XSu" secondAttribute="top" constant="69" id="i77-gj-agF"/>
-                            <constraint firstItem="OPw-Hp-n46" firstAttribute="centerX" secondItem="XYU-qY-XAa" secondAttribute="centerX" id="iqg-f3-KxK"/>
-                            <constraint firstAttribute="bottom" secondItem="XYU-qY-XAa" secondAttribute="bottom" id="lPJ-Hf-0sV"/>
-                            <constraint firstItem="0OM-rf-6IU" firstAttribute="leading" secondItem="G2s-zx-XSu" secondAttribute="leading" constant="66" id="lYH-0N-xut"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="G2s-zx-XSu"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tEX-q2-EaO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-768.79999999999995" y="-316.25615763546801"/>
+            <point key="canvasLocation" x="-768.79999999999995" y="-317.09145427286359"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -135,25 +120,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ri6-q3-czS">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ri6-q3-czS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hd-li-AlP">
-                                <rect key="frame" x="56" y="56" width="262" height="42"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hd-li-AlP">
+                                <rect key="frame" x="37" y="30" width="301" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="1yp-IM-ldb"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asQ-eg-OD5">
-                                <rect key="frame" x="133" y="531" width="108" height="75"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CND-4Z-D3o">
+                                <rect key="frame" x="82" y="561" width="211" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="75" id="00a-ig-lID"/>
-                                </constraints>
+                                <state key="normal" title="もう一回遊ぶ"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="VFz-VU-toT"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r4b-4a-0he">
+                                <rect key="frame" x="106" y="506" width="163" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                <color key="textColor" red="1" green="0.23635167591950157" blue="0.17095343818974262" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asQ-eg-OD5">
+                                <rect key="frame" x="133" y="617" width="107.99999999999997" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="タイトルに戻る"/>
                                 <connections>
                                     <segue destination="eyD-kJ-wpS" kind="show" id="ipF-Wa-wHy"/>
@@ -161,27 +159,17 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ri6-q3-czS" firstAttribute="top" secondItem="hTM-co-Ehw" secondAttribute="top" id="1bW-uh-wSr"/>
-                            <constraint firstItem="ri6-q3-czS" firstAttribute="centerX" secondItem="asQ-eg-OD5" secondAttribute="centerX" id="G6w-Kt-pQI"/>
-                            <constraint firstItem="2hd-li-AlP" firstAttribute="leading" secondItem="zGb-yn-wGH" secondAttribute="leading" constant="56" id="MaS-oe-9CF"/>
-                            <constraint firstAttribute="trailing" secondItem="ri6-q3-czS" secondAttribute="trailing" id="TMi-22-l2j"/>
-                            <constraint firstItem="ri6-q3-czS" firstAttribute="leading" secondItem="hTM-co-Ehw" secondAttribute="leading" id="XcO-kW-PoZ"/>
-                            <constraint firstItem="zGb-yn-wGH" firstAttribute="bottom" secondItem="asQ-eg-OD5" secondAttribute="bottom" constant="61" id="XiF-Jg-koO"/>
-                            <constraint firstItem="2hd-li-AlP" firstAttribute="top" secondItem="zGb-yn-wGH" secondAttribute="top" constant="36" id="Z5D-x6-wli"/>
-                            <constraint firstAttribute="bottom" secondItem="ri6-q3-czS" secondAttribute="bottom" id="cdS-mf-XDH"/>
-                            <constraint firstItem="ri6-q3-czS" firstAttribute="centerX" secondItem="2hd-li-AlP" secondAttribute="centerX" id="d3b-bh-wDf"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zGb-yn-wGH"/>
                     </view>
                     <connections>
                         <outlet property="JankenResultImage" destination="ri6-q3-czS" id="Nam-92-EsB"/>
                         <outlet property="resultText" destination="2hd-li-AlP" id="zKk-n4-TYb"/>
+                        <outlet property="winlabel" destination="r4b-4a-0he" id="0Rz-6O-93z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MMi-eR-cm2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1511.2" y="-316.99507389162562"/>
+            <point key="canvasLocation" x="1509.5999999999999" y="-317.99100449775113"/>
         </scene>
     </scenes>
     <resources>
@@ -191,4 +179,7 @@
         <image name="M-j_gu01.png" width="169" height="169"/>
         <image name="M-j_pa01.png" width="180" height="180"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="VFz-VU-toT"/>
+    </inferredMetricsTieBreakers>
 </document>
